--- a/BonusService.Test/BonusService.Test.csproj
+++ b/BonusService.Test/BonusService.Test.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BonusApi\BonusApi.csproj" />
       <ProjectReference Include="..\BonusService\BonusService.csproj" />
     </ItemGroup>
 
