--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -31,6 +31,7 @@
         <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
         <PackageReference Include="NSwag.AspNetCore" Version="14.0.0-preview009" />
+        <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.2" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     </ItemGroup>
 
