--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -50,11 +50,9 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
-
+    
     <ItemGroup>
-      <Compile Update="Postgres\ICatalogEntity.cs">
-        <DependentUpon>PostgresDbContext.cs</DependentUpon>
-      </Compile>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
