--- a/BonusService.Test/BonusService.Test.csproj
+++ b/BonusService.Test/BonusService.Test.csproj
@@ -10,11 +10,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BonusApi" Version="0.2.0" />
         <PackageReference Include="Correlate.AspNetCore" Version="5.1.0" />
         <PackageReference Include="FakeItEasy" Version="8.0.0" />
         <PackageReference Include="FluentAssertions" Version="7.0.0-alpha.3" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.13" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23531-01" />
+        <PackageReference Include="Testcontainers" Version="3.6.0" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.6.0" />
         <PackageReference Include="xunit" Version="2.6.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
