--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -24,6 +24,10 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
         <PackageReference Include="Hangfire.AspNetCore" Version="1.8.6" />
         <PackageReference Include="Hangfire.Core" Version="1.8.6" />
@@ -49,6 +53,12 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Compile Update="Pay\PayCommonCommand.cs">
+        <DependentUpon>OwnerMaxBonusPayController.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
