--- a/BonusService/appsettings.Development.json
+++ b/BonusService/appsettings.Development.json
@@ -5,7 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hangfire": "Host=localhost;Port=5555;Database=Hangfire;Username=postgres;Application Name=WorkerService"
+    "Hangfire": "Host=localhost;Port=5555;Database=hangfire;Username=postgres;Application Name=bonus-service",
+    "Postgres": "Host=localhost;Port=5555;Database=bonus;Username=postgres;Application Name=bonus-service"
+  },
+  "MongoConfig": {
+    "ConnectionString": "mongodb://localhost:33000?serverSelectionTimeoutMS=60000&connectTimeoutMS=7000&socketTimeoutMS=7000",
+    "QueriesFolder": "/PssPlatform/Queries",
+    "Database": "pssplatform"
   }
 }
