--- a/BonusService/appsettings.json
+++ b/BonusService/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Urls": "http://localhost:9098",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Hangfire": "Host=localhost;Port=5555;Database=hangfire;Username=postgres;Application Name=bonus-service",
