--- a/BonusService/appsettings.json
+++ b/BonusService/appsettings.json
@@ -15,5 +15,12 @@
     "ConnectionString": "mongodb://localhost:33000?serverSelectionTimeoutMS=60000&connectTimeoutMS=7000&socketTimeoutMS=7000",
     "QueriesFolder": "/PssPlatform/Queries",
     "Database": "pssplatform"
+  },
+  "IdentitySettings": {
+    "ConnectionString": "Host=sql-postgre;Port=5432;Database=Identity;Username=postgres;Password=Adminpostgres20190401;Application Name=Identity(PlatformWebApi);Maximum Pool Size = 20",
+    "TokenSettings": {
+      "Issuer": "PlatformWebApi",
+      "SecretKey": "0HjdAwh9XLfJYsVqtzSADhA0CweAwYoimI"
+      }
   }
 }
