--- a/BonusService/appsettings.Local.json
+++ b/BonusService/appsettings.Local.json
@@ -8,12 +8,15 @@
   "Urls": "http://localhost:9098",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hangfire": "Host=localhost;Port=5555;Database=hangfire;Username=postgres;Application Name=bonus-service",
-    "Postgres": "Host=localhost;Port=5555;Database=bonus;Username=postgres;Application Name=bonus-service"
+    "Hangfire": "Host=localhost;Port=55000;Database=hangfire;Username=postgres;Application Name=bonus-service",
+    "Postgres": "Host=localhost;Port=55000;Database=bonus;Username=postgres;Application Name=bonus-service"
   },
   "MongoConfig": {
     "ConnectionString": "mongodb://localhost:33000?serverSelectionTimeoutMS=60000&connectTimeoutMS=7000&socketTimeoutMS=7000",
     "QueriesFolder": "/PssPlatform/Queries",
     "Database": "pssplatform"
+  },
+  "IdentitySettings": {
+    "ConnectionString": "Host=localhost;Port=55000;Database=Identity;Username=postgres;Password=Adminpostgres20190401;Application Name=Identity(PlatformWebApi);Maximum Pool Size = 20",
   }
 }
