--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -39,7 +39,7 @@
         <PackageReference Include="NLog" Version="5.2.6" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
-        <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.2" />
+        <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="7.101.0" />
@@ -54,6 +54,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
