--- a/BonusService.Test/BonusService.Test.csproj
+++ b/BonusService.Test/BonusService.Test.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Docker.DotNet" Version="3.125.15" />
         <PackageReference Include="FakeItEasy" Version="8.0.0" />
         <PackageReference Include="FluentAssertions" Version="7.0.0-alpha.3" />
+        <PackageReference Include="GST.Fake.Authentication.JwtBearer" Version="7.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.14" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23531-01" />
         <PackageReference Include="xunit" Version="2.6.2" />
