--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -35,11 +35,10 @@
         <PackageReference Include="Hangfire.NetCore" Version="1.8.6" />
         <PackageReference Include="Hangfire.PostgreSql" Version="1.20.4" />
         <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
-        <PackageReference Include="MongoDB.EntityFrameworkCore" Version="7.0.0-preview.1" />
         <PackageReference Include="NLog" Version="5.2.6" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
-        <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.3" />
+        <PackageReference Include="Riok.Mapperly" Version="3.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="7.101.0" />
