--- a/BonusService/Properties/launchSettings.json
+++ b/BonusService/Properties/launchSettings.json
@@ -8,7 +8,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:9098",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
     },
     "https": {
@@ -16,7 +16,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7249;http://localhost:5023",
+      "applicationUrl": "http://localhost:9098",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
