--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     restart: always
     networks:
       - net
-    # ports:
-    # - "9098:9098"
+    ports:
+    - "8080:80"
     deploy:
       resources:
         limits:
