--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -29,6 +29,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="NLog.DiagnosticSource" Version="5.2.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
         <PackageReference Include="Hangfire.AspNetCore" Version="1.8.6" />
         <PackageReference Include="Hangfire.Core" Version="1.8.6" />
