--- a/BonusService/NLog.config
+++ b/BonusService/NLog.config
@@ -12,7 +12,7 @@
     <variable name="username" value="logger"/>
     <variable name="password" value="XSW@zaq1"/>
     <variable name="host" value="rabbitmq"/>
-    <variable name="routingkey" value="logging.platformwebapi.json"/>
+    <variable name="routingkey" value="logging.bonus.json"/>
     <variable name="exchange" value="SUO_LOGGING"/>
 
     <!--
@@ -24,9 +24,9 @@
     </extensions>
     <targets>
 
-        <target xsi:type="File" name="platformwebapi"
+        <target xsi:type="File" name="bonus"
                 fileName="${basedir}/log/PlatformWebApi/PlatformWebApi-${date:format=dd-MM-yyyy}-Full.log"
-                layout="${date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ## ${event-properties:item=EventId_Id} ## ${uppercase:${level}} ##${logger}##${message} ${exception:format=tostring}"
+                layout="TraceId=${activity:property=TraceId} | ${date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ## ${event-properties:item=EventId_Id} ## ${uppercase:${level}} ##${logger}##${message} ${exception:format=tostring}"
                 archiveFileName="${basedir}/log/PlatformWebApi/archives/${date:format=dd-MM-yyyy}/PlatformWebApi-${date:format=dd-MM-yyyy}-Full.{#####}.log"
                 archiveAboveSize="1024000"
                 archiveNumbering="Sequence"
@@ -35,25 +35,28 @@
                 keepFileOpen="false"/>
         <target xsi:type="File" name="exceptions"
                 fileName="${basedir}/log/PlatformWebApi/Exceptions-${date:format=dd-MM-yyyy}-Full.log"
-                layout="${date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ##${event-properties:item=EventId_Id}##${uppercase:${level}}##${logger}##${message} ${exception:format=tostring}"
+                layout="TraceId=${activity:property=TraceId} | {date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ##${event-properties:item=EventId_Id}##${uppercase:${level}}##${logger}##${message} ${exception:format=tostring}"
                 archiveFileName="${basedir}/log/PlatformWebApi/archives/${date:format=dd-MM-yyyy}/Exceptions-${date:format=dd-MM-yyyy}-Full.{#####}.log"
                 archiveAboveSize="1024000"
                 archiveNumbering="Sequence"
                 maxArchiveFiles="1000"
                 concurrentWrites="true"
                 keepFileOpen="false"/>
-        <target name="Console"
+        <target name="console"
                 xsi:type="Console"
-                layout="${date:universalTime=false:format=HH\:mm\:ss.fff} {${level}}${literal:text=\t}[${logger:shortName=true}] |${substring:${aspnet-TraceIdentifier:truncate=16}:start=3}| ${message}${onexception: ${exception:format=ToString}}"/>
+                layout="${activity:property=TraceId}|${date:universalTime=false:format=HH\:mm\:ss.fff}|{${level}}${literal:text=\t}[${logger:shortName=true}] |${substring:${aspnet-TraceIdentifier:truncate=16}:start=3}| ${message}${onexception: ${exception:format=ToString}}"/>
 
     </targets>
 
 
+
     <rules>
-        <!-- BlackHole without writeTo -->
-        <logger name="Microsoft.*" maxLevel="Info" final="true"/>
         <logger name="ExceptionLogger" maxLevel="Error" final="true" writeTo="exceptions"/>
-        <logger name="*" minlevel="Trace" writeTo="platformwebapi"/>
-        <logger name="*" minlevel="Info" writeTo="Console"/>
+        <logger name="*" minlevel="Info" writeTo="bonus"/>
+        <logger name="*" minlevel="Info" writeTo="console"/>
     </rules>
+
+    <extensions>
+        <add assembly="NLog.DiagnosticSource"/>
+    </extensions>
 </nlog>
