--- a/BonusService/NLog.config
+++ b/BonusService/NLog.config
@@ -49,7 +49,7 @@
                 -->
 
         <target name="Console" xsi:type="console">
-            <layout xsi:type="JsonLayout" includeAllProperties="true" maxRecursionLimit="5" indentJson="true">
+            <layout xsi:type="JsonLayout" includeAllProperties="true" maxRecursionLimit="5">
                 <attribute name="level" layout="${level:upperCase=true}" />
                 <attribute name="logger" layout="${logger:shortName=true}" />
                 <attribute name="message" layout="${message}" escapeUnicode="false"/>
