--- a/BonusService/NLog.config
+++ b/BonusService/NLog.config
@@ -26,7 +26,7 @@
 
         <target xsi:type="File" name="bonus"
                 fileName="${basedir}/log/BonusService/PlatformWebApi-${date:format=dd-MM-yyyy}-Full.log"
-                layout="TraceId=${activity:property=TraceId} | ${date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ## ${event-properties:item=EventId_Id} ## ${uppercase:${level}} ##${logger}##${message} ${exception:format=tostring}"
+                layout="${activity:property=TraceId} | ${date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ## ${event-properties:item=EventId_Id} ## ${uppercase:${level}} ##${logger}##${message} ${exception:format=tostring}"
                 archiveFileName="${basedir}/log/PlatformWebApi/archives/${date:format=dd-MM-yyyy}/PlatformWebApi-${date:format=dd-MM-yyyy}-Full.{#####}.log"
                 archiveAboveSize="1024000"
                 archiveNumbering="Sequence"
@@ -35,7 +35,7 @@
                 keepFileOpen="false"/>
         <target xsi:type="File" name="exceptions"
                 fileName="${basedir}/log/BonusService/Exceptions-${date:format=dd-MM-yyyy}-Full.log"
-                layout="TraceId=${activity:property=TraceId} | {date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ##${event-properties:item=EventId_Id}##${uppercase:${level}}##${logger}##${message} ${exception:format=tostring}"
+                layout="${activity:property=TraceId} | {date:universalTime=false:format=HH\:mm\:ss.fff} ## [${threadid}] ##${event-properties:item=EventId_Id}##${uppercase:${level}}##${logger}##${message} ${exception:format=tostring}"
                 archiveFileName="${basedir}/log/PlatformWebApi/archives/${date:format=dd-MM-yyyy}/Exceptions-${date:format=dd-MM-yyyy}-Full.{#####}.log"
                 archiveAboveSize="1024000"
                 archiveNumbering="Sequence"
@@ -49,7 +49,8 @@
                 -->
 
         <target name="Console" xsi:type="console">
-            <layout xsi:type="JsonLayout" includeAllProperties="true" maxRecursionLimit="5">
+            <layout xsi:type="JsonLayout" includeAllProperties="true" maxRecursionLimit="6">
+                <attribute name="traceId" layout="${activity:property=TraceId}" />
                 <attribute name="level" layout="${level:upperCase=true}" />
                 <attribute name="logger" layout="${logger:shortName=true}" />
                 <attribute name="message" layout="${message}" escapeUnicode="false"/>
