--- a/BonusService.Test/BonusService.Test.csproj
+++ b/BonusService.Test/BonusService.Test.csproj
@@ -10,12 +10,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoBogus" Version="2.13.1" />
         <PackageReference Include="Correlate.AspNetCore" Version="5.2.0" />
         <PackageReference Include="FakeItEasy" Version="8.0.0" />
         <PackageReference Include="FluentAssertions" Version="7.0.0-alpha.3" />
         <PackageReference Include="GST.Fake.Authentication.JwtBearer" Version="7.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.14" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23531-01" />
+        <PackageReference Include="NBomber" Version="5.3.0" />
         <PackageReference Include="xunit" Version="2.6.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
