--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -41,7 +41,7 @@
         <PackageReference Include="NLog" Version="5.2.7" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
-        <PackageReference Include="Riok.Mapperly" Version="3.2.0" />
+        <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Unchase.Swashbuckle.AspNetCore.Extensions" Version="2.7.1" />
