--- a/BonusService/appsettings.Development.json
+++ b/BonusService/appsettings.Development.json
@@ -1,12 +1,19 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hangfire": "Host=sql-postgre;Port=5432;Database=hangfire;Username=postgres;Password=Adminpostgres20190401;Application Name=bonus-service",
-    "Postgres": "Host=sql-postgre;Port=5432;Database=bonus;Username=postgres;Password=Adminpostgres20190401;Application Name=bonus-service"
+    "Hangfire": "Host=sql-postgre;Port=15432;Database=hangfire;Username=postgres;Password=Adminpostgres20190401;Application Name=bonus-service",
+    "Postgres": "Host=sql-postgre;Port=15432;Database=bonus;Username=postgres;Password=Adminpostgres20190401;Application Name=bonus-service"
   },
   "MongoConfig": {
     "ConnectionString": "mongodb://pssplatform_rw:RWdatawrite$@mongodb:27017/pssplatform",
     "QueriesFolder": "/app/queries",
     "Database": "pssplatform"
+  },
+  "IdentitySettings": {
+    "ConnectionString": "Host=sql-postgre;Port=15432;Database=Identity;Username=postgres;Password=Adminpostgres20190401;Application Name=bonus-service;Maximum Pool Size = 20",
+    "TokenSettings": {
+      "Issuer": "PlatformWebApi",
+      "SecretKey": "0HjdAwh9XLfJYsVqtzSADhA0CweAwYoimI"
+    }
   }
 }
