--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -43,6 +43,7 @@
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
         <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Unchase.Swashbuckle.AspNetCore.Extensions" Version="2.7.1" />
         <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="7.101.0" />
