--- a/BonusService/appsettings.json
+++ b/BonusService/appsettings.json
@@ -22,5 +22,29 @@
       "Issuer": "PlatformWebApi",
       "SecretKey": "0HjdAwh9XLfJYsVqtzSADhA0CweAwYoimI"
       }
+  },
+  "NLog": {
+    "extensions": [
+      {
+        "assembly": "NLog.HangfireJobLogsTarget"
+      }
+    ],
+    "default-wrapper": {
+      "type": "AsyncWrapper",
+      "overflowAction": "Block"
+    },
+    "targets": {
+      "hangfire_dashboard": {
+        "layout": "${longdate}|${level:uppercase=true}|${logger}|${message}|${exception:format=toString}${hangfire-decorator}",
+        "type": "HangfireJobLogs"
+      }
+    },
+    "rules": {
+      "hangfire": {
+        "logger": "Sample.Jobs.*",
+        "minLevel": "Info",
+        "writeTo": "hangfire_dashboard"
+      }
+    }
   }
 }
