--- a/BonusService/appsettings.json
+++ b/BonusService/appsettings.json
@@ -8,16 +8,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hangfire": "Host=localhost;Port=5555;Database=hangfire;Username=postgres;Application Name=bonus-service",
-    "Postgres": "Host=localhost;Port=5555;Database=bonus;Username=postgres;Application Name=bonus-service"
+    "Hangfire": "Host=localhost;Port=5432;Database=hangfire;Username=postgres;Application Name=bonus-service",
+    "Postgres": "Host=localhost;Port=5432;Database=bonus;Username=postgres;Application Name=bonus-service"
   },
   "MongoConfig": {
-    "ConnectionString": "mongodb://localhost:33000?serverSelectionTimeoutMS=60000&connectTimeoutMS=7000&socketTimeoutMS=7000",
-    "QueriesFolder": "/PssPlatform/Queries",
+    "ConnectionString": "mongodb://pssplatform_rw:RWdatawrite$@mongodb:27017/pssplatform",
+    "QueriesFolder": "/app/queries",
     "Database": "pssplatform"
   },
   "IdentitySettings": {
-    "ConnectionString": "Host=sql-postgre;Port=5555;Database=Identity;Username=postgres;Password=Adminpostgres20190401;Application Name=bonus-service;Maximum Pool Size = 20",
+    "ConnectionString": "Host=sql-postgre;Port=5432;Database=Identity;Username=postgres;Password=Adminpostgres20190401;Application Name=bonus-service;Maximum Pool Size = 20",
     "TokenSettings": {
       "Issuer": "PlatformWebApi",
       "SecretKey": "0HjdAwh9XLfJYsVqtzSADhA0CweAwYoimI"
