--- a/BonusService/appsettings.json
+++ b/BonusService/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hangfire": "Host=localhost;Port=5432;Database=hangfire;Username=postgres;Application Name=bonus-service",
-    "Postgres": "Host=localhost;Port=5432;Database=bonus;Username=postgres;Application Name=bonus-service"
+    "Hangfire": "Host=sql-postgre;Port=5432;Database=hangfire;Username=postgres;Application Name=bonus-service",
+    "Postgres": "Host=sql-postgre;Port=5432;Database=bonus;Username=postgres;Application Name=bonus-service"
   },
   "MongoConfig": {
     "ConnectionString": "mongodb://pssplatform_rw:RWdatawrite$@mongodb:27017/pssplatform",
