--- a/BonusService/Properties/launchSettings.json
+++ b/BonusService/Properties/launchSettings.json
@@ -18,7 +18,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:9100",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "DevRemote"
       }
     }
   }
