fix executeBonusProgram. Add bonus program validation

--- a/BonusService.Test/BonusService.Test.csproj
+++ b/BonusService.Test/BonusService.Test.csproj
@@ -8,6 +8,7 @@
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <OutputType>Library</OutputType>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,7 +19,7 @@
         <PackageReference Include="GST.Fake.Authentication.JwtBearer" Version="7.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.14" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23531-01" />
-        <PackageReference Include="NBomber" Version="5.4.0" />
+        <PackageReference Include="NBomber" Version="5.4.1" />
         <PackageReference Include="xunit" Version="2.6.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
