--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="Correlate.AspNetCore" Version="5.2.0" />
+        <PackageReference Include="DateOnlyTimeOnly.AspNet" Version="2.1.1" />
+        <PackageReference Include="DateOnlyTimeOnly.AspNet.Swashbuckle" Version="2.1.1" />
         <PackageReference Include="FluentValidation" Version="11.8.1" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
@@ -43,6 +45,7 @@
         <PackageReference Include="NLog.Extensions.Logging" Version="5.3.7" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.7" />
         <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.6" />
+        <PackageReference Include="SwaggerExampleAttrLib" Version="0.1.23" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
