fix import util

--- a/ImportBonuse/ImportBonuse.csproj
+++ b/ImportBonuse/ImportBonuse.csproj
@@ -12,6 +12,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <None Remove="1.txt" />
+      <Content Include="1.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
