--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -58,6 +58,10 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>$(NoWarn);1591</NoWarn>
     </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;1591;3277</NoWarn>
+    </PropertyGroup>
     
     <ItemGroup>
       <Content Include="..\.dockerignore">
