--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -40,18 +40,18 @@
         <PackageReference Include="Hangfire.Core" Version="1.8.6" />
         <PackageReference Include="Hangfire.NetCore" Version="1.8.6" />
         <PackageReference Include="Hangfire.PostgreSql" Version="1.20.4" />
-        <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
         <PackageReference Include="NLog" Version="5.2.7" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.3.7" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.7" />
-        <PackageReference Include="Riok.Mapperly" Version="3.3.0-next.6" />
+        <PackageReference Include="Riok.Mapperly" Version="3.3.0" />
         <PackageReference Include="SwaggerExampleAttrLib" Version="0.1.23" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Unchase.Swashbuckle.AspNetCore.Extensions" Version="2.7.1" />
-        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.101.1.1" />
+        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.101.1.2" />
     </ItemGroup>
 
     <PropertyGroup>
