--- a/BonusService/appsettings.json
+++ b/BonusService/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hangfire": "Host=sql-postgre;Port=5432;Database=hangfire;Username=postgres;Application Name=bonus-service",
+    "Hangfire": "Host=sql-postgre;Port=5432;Database=hangfire;Username=postgres;Application Name=bonus-service(hangfire)",
     "Postgres": "Host=sql-postgre;Port=5432;Database=bonus;Username=postgres;Application Name=bonus-service"
   },
   "MongoConfig": {
