--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <Nullable>warnings</Nullable>
+        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <LangVersion>default</LangVersion>
@@ -53,7 +53,7 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.0" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Unchase.Swashbuckle.AspNetCore.Extensions" Version="2.7.1" />
-        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.101.1.3" />
+        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.101.2" />
     </ItemGroup>
 
     <PropertyGroup>
