--- a/BonusService/NLog.config
+++ b/BonusService/NLog.config
@@ -22,7 +22,7 @@
     <extensions>
         <add assembly="NLog.Web.AspNetCore"/>
     </extensions>
-#    <targets>
+    <targets>
 
 #        <target xsi:type="File" name="bonus"
 #                fileName="${basedir}/log/BonusService/PlatformWebApi-${date:format=dd-MM-yyyy}-Full.log"
