--- a/BonusService/appsettings.Local.json
+++ b/BonusService/appsettings.Local.json
@@ -11,6 +11,9 @@
     "Database": "pssplatform"
   },
   "IdentitySettings": {
-    "ConnectionString": "Host=localhost;Port=5555;Database=Identity;Username=postgres"
+    "ConnectionString": "host=localhost:5672;username=guest;password=guest"
+  },
+  "RabbitSettings": {
+    "ConnectionString": "host=rabbitmq:5672;username=sovs;password=sovs12345;timeout=30"
   }
 }
