--- a/BonusService/appsettings.json
+++ b/BonusService/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
+  "RabbitSettings": {
+    "ConnectionString": "host=rabbitmq:5672;username=sovs;password=sovs12345;timeout=30"
+  },
   "ConnectionStrings": {
     "Hangfire": "Host=sql-postgre;Port=5432;Database=hangfire;Username=postgres;Application Name=bonus-service(hangfire)",
     "Postgres": "Host=sql-postgre;Port=5432;Database=bonus;Username=postgres;Application Name=bonus-service"
