--- a/BonusService/BonusService.csproj
+++ b/BonusService/BonusService.csproj
@@ -20,7 +20,7 @@
         <PackageReference Include="Mediator.Abstractions" Version="3.0.0-preview.15" />
         <PackageReference Include="Mediator.SourceGenerator" Version="3.0.0-preview.15">
           <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
         <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
@@ -35,11 +35,11 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="NLog.DiagnosticSource" Version="5.2.0" />
+        <PackageReference Include="NLog.DiagnosticSource" Version="5.2.1" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
-        <PackageReference Include="Hangfire.AspNetCore" Version="1.8.7" />
-        <PackageReference Include="Hangfire.Core" Version="1.8.7" />
-        <PackageReference Include="Hangfire.NetCore" Version="1.8.7" />
+        <PackageReference Include="Hangfire.AspNetCore" Version="1.8.9" />
+        <PackageReference Include="Hangfire.Core" Version="1.8.9" />
+        <PackageReference Include="Hangfire.NetCore" Version="1.8.9" />
         <PackageReference Include="Hangfire.PostgreSql" Version="1.20.5" />
         <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
         <PackageReference Include="NLog" Version="5.2.8" />
@@ -53,7 +53,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.0" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Unchase.Swashbuckle.AspNetCore.Extensions" Version="2.7.1" />
-        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.101.2" />
+        <PackageReference Include="UserProfileService" Version="7.0.1" />
+        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.101.2.1" />
     </ItemGroup>
 
     <PropertyGroup>
