Мой последний коммит

--- a/BonusService/appsettings.Local.json
+++ b/BonusService/appsettings.Local.json
@@ -14,6 +14,6 @@
     "ConnectionString": "host=localhost:5672;username=guest;password=guest"
   },
   "RabbitSettings": {
-    "ConnectionString": "host=rabbitmq:5672;username=sovs;password=sovs12345;timeout=30"
+    "ConnectionString": "host=rabbitmq:5672;username=guest;password=guest"
   }
 }
